added additional edge cases for the user service and tests